ファイル名を修正しemitを実装

--- a/after-tutorial/after-tutorial/src/app/app.component.html
+++ b/after-tutorial/after-tutorial/src/app/app.component.html
@@ -1,4 +1,10 @@
-<ul>
-  <app-user-list-component *ngIf="users$ | async as users" [users]="users"></app-user-list-component>
-</ul>
+<app-user-list-filter-component>
+  *ngIf="userListFilter$ | async as userListFilter" 
+  (testSetEvent)="click($event)"
+  >
+</app-user-list-filter-component>
+<div>
+  {{ test }}
+</div>
+<app-user-list-component *ngIf="users$ | async as users" [users]="users"></app-user-list-component>
 
