--- a/after-tutorial/after-tutorial/src/app/user-list-item-component/user-list-item.component.html
+++ b/after-tutorial/after-tutorial/src/app/user-list-item-component/user-list-item.component.html
@@ -1,1 +1,2 @@
-#{{ user.id }} {{ user.first_name }} {{ user.last_name }}
+<a routerLink='/users/{{user.id}}'>#{{ user.id }} {{ user.first_name }} {{ user.last_name }}</a>
+
